[package]
name = "hashtag-importer"
description = "Mastodon tool to import posts on a hashtag from remote mastodon servers into your instance. Does not need admin rights"
version = "0.1.0"
edition = "2021"
authors = ["Anisse Astier <anisse@astier.eu>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", default-features = false, features = ["help", "std", "derive"] }
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls-native-roots", "blocking", "cookies", "gzip", "brotli", "json"] }
serde = { version = "1.0.188", default-features = false, features = ["derive", "std"] }
toml = "0.8.0"
webbrowser = "0.8.11"
